# radMC

./: .gitignore
cmake/: FindNetCDF.cmake
cpp/: CMakeLists.txt  clext.h  clsim.cpp  clsim.hpp  config.cpp  config.hpp  netcdf_interface_mc.cpp  netcdf_interface_mc.hpp  radMC_planar.cpp
cpp/tests/: plot_conv.py  test_convergence.cpp  test_semi_int.cpp  test_semi_lf.cpp  test_slab_int.cpp  test_slab_lf.cpp  test_welford.cpp  welford.tcc
cpp/tests/data/: config_conv1.json  config_conv2.json  config_conv3.json  config_test_semi1.json  config_test_slab1.json  data_test_semi1.nc  data_test_slab1.nc
opencl/: MC_planar.cl  MC_planar_header.cl  MC_planar_slab.cl  MC_slab.cl  detector_integral.cl  detector_integral_slab.cl  detector_lf.cl  detector_lf_slab.cl  fresnel.cl  native_math.cl  reflection_transmission.cl  scattering_hg.cl  seed.cl  tyche_i.cl
python/: clext.py  config.json  config_loader.py  radMC_planar.py  rad_mc_planar.py  radiance.npz  radiance_zL.npz  radmc_planar.py  seeds.py  structs.py
